# tensorguard

./: .gitignore  ARCHITECTURE.md  MASTER_PLAN.md  README.md  append_tests.py  pyproject.toml
.github/workflows/: lint_and_test.yml  publish.yml
tensorguard/core/: engine.py  exceptions.py  parser.py
tensorguard/numpy/: decorator.py
tensorguard/pytorch/: decorator.py
tensorguard/tensorflow/: decorator.py
tests/: test_core.py  test_numpy.py  test_pytorch.py  test_tensorflow.py
