[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-shape-guard"
version = "0.1.0"
authors = [
  { name="AI Engineering Team" },
]
description = "A zero-overhead, framework-specific tensor shape validator for PyTorch, TensorFlow, and NumPy."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = ["pytest"]
pytorch = ["torch"]
numpy = ["numpy"]
tensorflow = ["tensorflow"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorguard*"]
